# pyutils

./: MANIFEST.in  README.md  arrayutils.py  maskutils.py  pyproject.toml  simutils.py
data/: polydata.json
jenutils/: simutils.py
jenutils/data/: polydata.json
pyutils/: arrayutils.py  polyutils.py
