[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutils"
version = "0.1.0"
requires-python = ">=3.8"
description = "Useful python snippets and functions"
readme = "README.md"
dependencies = ["numpy>=1.19.0","coxeter"]


[tool.setuptools]
packages=["jenutils"]